[project]
name = "signals"
version = "0.1.0"
description = "Implementation of TC39 signals proposal in Python (https://github.com/tc39/proposal-signals)"
authors = [{ name = "Jonas Ehrlich", email = "jonas.ehrlich@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "pytest-sugar>=1.0.0",
    "ruff>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
